@@ -1,6 +1,7 @@
 2/18/2015 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.5.6 'Marshal West':
-	- bandwidth control fixed; 
+	- bandwidth control fixed;
+	- control traffic excluded from the traffic limitation; 
 	- REST API docs fixed;
 
 2/3/2015 Oleg Moskalenko <mom040267@gmail.com>
